--- a/inventory-systems.html
+++ b/inventory-systems.html
@@ -8,7 +8,7 @@
   max-width: 600px;
   margin: 40px auto;
   padding: 20px;
-  background-image: url('');
+  background-image: url('Black neon Internet security Instagram Post .jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
